# aoc

./: .gitignore  Cargo.toml  README.md  flake.nix
benches/: year_2015_day_01.rs  year_2015_day_02.rs  year_2015_day_03.rs  year_2015_day_04.rs  year_2025.rs  year_2025_day_01.rs  year_2025_day_02.rs  year_2025_day_03.rs  year_2025_day_04.rs  year_2025_day_05.rs  year_2025_day_06.rs  year_2025_day_07.rs  year_2025_day_08.rs  year_2025_day_09.rs  year_2025_day_10.rs  year_2025_day_11.rs  year_2025_day_12.rs
python/: README.md  main.py
rust/: .gitignore  Cargo.toml  README.md
rust/benches/: my_benchmark.rs  template.rs  year_2025_day_02.rs  year_2025_day_04.rs  year_2025_day_05.rs  year_2025_day_07.rs  year_2025_day_08.rs  year_2025_day_10.rs
rust/src/: lib.rs  main.rs  template.rs  utils.rs  year_2015_day_01.rs  year_2015_day_02.rs  year_2015_day_03.rs  year_2015_day_04.rs  year_2025_day_01.rs  year_2025_day_02.rs  year_2025_day_03.rs  year_2025_day_04.rs  year_2025_day_05.rs  year_2025_day_06.rs  year_2025_day_07.rs  year_2025_day_08.rs  year_2025_day_09.rs  year_2025_day_10.rs  year_2025_day_11.rs
rust/src/2022/: day09.rs
rust/src/2024/: day01.rs
rust/src/year2023/: day01.rs
rust/src/years/year2015/: day01.rs  day02.rs  mod.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  lib.rs  main.rs  template.rs  utils.rs  year_2015_day_01.rs  year_2015_day_02.rs  year_2015_day_03.rs  year_2015_day_04.rs  year_2025_day_01.rs  year_2025_day_02.rs  year_2025_day_03.rs  year_2025_day_04.rs  (+8 more)
(+55 files in other folders)
