[package]
name = "aoc"
version = "1.0.0"
authors = ["tpyd <112725276+tpyd@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[[bench]]
name = "my_benchmark"
harness = false
