[package]
name = "aoc"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "year_2015_day_01"
harness = false

[[bench]]
name = "year_2015_day_02"
harness = false

[[bench]]
name = "year_2015_day_03"
harness = false

[[bench]]
name = "year_2015_day_04"
harness = false

[[bench]]
name = "year_2025_day_01"
harness = false

[[bench]]
name = "year_2025_day_02"
harness = false

[[bench]]
name = "year_2025_day_03"
harness = false

[[bench]]
name = "year_2025_day_04"
harness = false

